--- a/package.json
+++ b/package.json
@@ -3,12 +3,50 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"start-web": "node scripts/start.js",
+    "build-web": "node scripts/build.js",
+		"start-ios": "react-native run-ios",
+    "start-android": "react-native run-android"
 	},
 	"dependencies": {
+		"autoprefixer": "7.1.2",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
+    "babel-preset-react-app": "^3.0.2",
+    "babel-runtime": "6.26.0",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "css-loader": "0.28.4",
+    "dotenv": "4.0.0",
+    "eslint": "4.4.1",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.6",
+    "promise": "8.0.1",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.2"
+		"react-dev-utils": "^4.0.0",
+		"react-dom": "^16.0.0-beta.5",
+		"react-native": "0.47.2",
+		"style-loader": "0.18.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.5.9",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "2.7.1",
+    "webpack-manifest-plugin": "1.2.1",
+    "whatwg-fetch": "2.0.3"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
@@ -16,7 +54,17 @@
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
-	"jest": {
-		"preset": "react-native"
-	}
+	"eslintConfig": {
+    "extends": "react-app"
+  },
+	"contributors": [
+    "dratwas",
+    "mike866"
+  ],
+	"keywords": [
+    "react",
+    "react-native",
+    "universal"
+  ],
+  "license": "ISC"
 }
