--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-	"name": "UniversalReactApp",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start-web": "node web/scripts/start.js",
+  "name": "UniversalReactApp",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
     "build-web": "node web/scripts/build.js",
-		"start-ios": "react-native run-ios",
-    "start-android": "react-native run-android"
-	},
-	"dependencies": {
-		"autoprefixer": "7.1.2",
+    "haul": "haul start",
+    "ios": "react-native run-ios",
+    "web": "node web/scripts/start.js"
+  },
+  "dependencies": {
+    "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -36,32 +37,33 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
-		"react": "16.0.0-alpha.12",
-		"react-dev-utils": "^4.0.0",
-		"react-dom": "^16.0.0-beta.5",
-		"react-native": "0.47.2",
-		"style-loader": "0.18.2",
+    "react": "16.0.0-alpha.12",
+    "react-dev-utils": "^4.0.0",
+    "react-dom": "^16.0.0-beta.5",
+    "react-native": "0.47.2",
+    "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
-	},
-	"devDependencies": {
-		"babel-jest": "20.0.3",
-		"babel-preset-react-native": "2.0.1",
-		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.12"
-	},
-	"eslintConfig": {
+  },
+  "devDependencies": {
+    "babel-jest": "20.0.3",
+    "babel-preset-react-native": "2.0.1",
+    "haul": "^1.0.0-beta.5",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "eslintConfig": {
     "extends": "react-app"
   },
-	"contributors": [
+  "contributors": [
     "dratwas",
     "mike866"
   ],
-	"keywords": [
+  "keywords": [
     "react",
     "react-native",
     "universal"
