--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dev-utils": "^4.0.0",
     "react-dom": "^16.0.0-beta.5",
     "react-native": "0.47.2",
+    "react-primitives": "^0.4.3",
     "style-loader": "0.18.2",
     "styled-components": "^2.1.2",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -52,7 +53,7 @@
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
-    "babel-preset-react-native": "2.0.1",
+    "babel-preset-react-native": "2.1.0",
     "haul": "^1.0.0-beta.5",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
