--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
-    "react": "16.0.0-alpha.12",
+    "react": "16.0.0-beta.5",
     "react-dev-utils": "^4.0.0",
     "react-dom": "^16.0.0-beta.5",
     "react-native": "0.47.2",
