--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^16.0.0-beta.5",
     "react-native": "0.47.2",
     "react-primitives": "^0.4.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "styled-components": "^2.1.2",
     "sw-precache-webpack-plugin": "0.11.4",
