--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dev-utils": "^4.0.0",
     "react-dom": "^16.0.0-beta.5",
     "react-native": "0.47.2",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "style-loader": "0.18.2",
